초기설정 완료

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -7,7 +7,10 @@
     <title>hodu-market</title>
   </head>
   <body>
+    <div id="app"></div>
+
     <hodu-footer></hodu-footer>
-    <script type="module" src="/src/main.js"></script>
+
+    <script type="module" src="main.js"></script>
   </body>
 </html>
