--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>hodu-market</title>
   </head>
   <body>
-    <hodu-footer></hodu-footer>
+    <bottom-footer></bottom-footer>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
