--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       color: var(--button-darkcolor);
       white-space: nowrap; /* 줄바꿈 방지 */
       transition: all 0.3s;
+      font-weight: 500;
     }
 
     .id-input {
@@ -48,8 +49,8 @@
     }
 
     .ps-text {
-      font-size: 1.4rem;
-      color: #333;
+      font-size: 1.6rem;
+      color: var(--button-darkcolor);
       font-weight: 500;
     }
 
@@ -57,7 +58,7 @@
       width: 100%;
       height: 50px;
       padding: 0 15px;
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       border: 1px solid #ddd;
       border-radius: 4px;
       outline: none;
@@ -70,6 +71,53 @@
 
     .ps-input::placeholder {
       color: #000;
+      font-size: 1.6rem;
+    }
+    .item-box {
+      width: 620px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .item-text {
+      font-size: 1.4rem;
+      color: var(--button-darkcolor);
+      font-weight: 500;
+    }
+
+    .input-wrapper {
+      position: relative;
+    }
+
+    .item-input {
+      width: 100%;
+      height: 50px;
+      padding: 0 80px 0 15px; /* 오른쪽 여백 확보 */
+      font-size: 1.6rem;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      outline: none;
+      transition: border-color 0.3s;
+    }
+
+    .item-input:focus {
+      border: 2px solid #00c853;
+    }
+
+    .item-input::placeholder {
+      color: #000;
+      font-size: 1.6rem;
+    }
+
+    .char-count {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 1.6rem;
+      color: var(--disabled-color);
+      pointer-events: none; /* 클릭 방지 */
     }
   </style>
   <body>
@@ -86,13 +134,29 @@
         placeholder="text"
       />
     </div>
-    <label for="">비밀번호</label>
-    <input type="text" />
-    <label for="">상품명</label>
-    <input type="text" />
+    <div class="item-box">
+      <label for="itemName" class="item-text">상품명</label>
+      <div class="input-wrapper">
+        <input
+          type="text"
+          id="itemName"
+          class="item-input"
+          placeholder="상품명을 입력해주세요."
+          maxlength="50"
+        />
+        <span class="char-count"> <span id="currentCount">0</span>/50 </span>
+      </div>
+    </div>
     <label for="">판매가</label>
     <input type="text" />
     <script type="module" src="/src/main.js"></script>
-    <script></script>
+    <script>
+      const input = document.getElementById('itemName')
+      const countSpan = document.getElementById('currentCount')
+
+      input.addEventListener('input', function () {
+        countSpan.textContent = this.value.length
+      })
+    </script>
   </body>
 </html>
