로그인 회원가입 기능 구현

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -7,9 +7,6 @@
     <title>hodu-market</title>
   </head>
   <body>
-    로그인
-    <a href="../../../index.html">홈으로</a>
-    <hodu-footer></hodu-footer>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
