--- a/src/pages/regist/index.html
+++ b/src/pages/regist/index.html
@@ -6,9 +6,6 @@
     <title></title>
   </head>
   <body>
-    회원가입
-    <a href="../../../index.html">홈으로</a>
-    <hodu-footer></hodu-footer>
-    <script type="module" src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
