--- a/index.html
+++ b/index.html
@@ -7,278 +7,8 @@
     <link rel="stylesheet" href="./src/style.css" />
     <title>hodu-market</title>
   </head>
-  <style>
-    .id-box {
-      width: 480px;
-      height: 60px;
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .id-box label {
-      font-size: 1.6rem;
-      color: var(--button-darkcolor);
-      white-space: nowrap;
-      transition: all 0.3s;
-      font-weight: 500;
-    }
-
-    .id-input {
-      flex: 1;
-      height: 100%;
-      border: none;
-      border-bottom: 1px solid #ddd;
-      font-size: 1.6rem;
-      outline: none;
-      background: transparent;
-    }
-
-    .id-input:focus {
-      border-bottom: 2px solid var(--input-success-color);
-    }
-
-    .ps-box {
-      width: 480px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .ps-text {
-      font-size: 1.6rem;
-      color: var(--button-darkcolor);
-      font-weight: 500;
-    }
-
-    .ps-input {
-      width: 100%;
-      height: 54px;
-      padding: 0 15px;
-      font-size: 1.6rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      outline: none;
-      transition: border-color 0.3s;
-    }
-
-    .ps-input:focus {
-      border: 2px solid var(--input-success-color);
-    }
-
-    .ps-input::placeholder {
-      color: #000;
-      font-size: 1.6rem;
-    }
-
-    .item-box {
-      width: 826px;
-      height: 54px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .item-text {
-      font-size: 1.4rem;
-      color: var(--button-darkcolor);
-      font-weight: 500;
-    }
-
-    .input-wrapper {
-      position: relative;
-    }
-
-    .item-input {
-      width: 100%;
-      height: 54px;
-      padding: 0 80px 0 15px;
-      font-size: 1.6rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      outline: none;
-      transition: border-color 0.3s;
-    }
-
-    .item-input:focus {
-      border: 2px solid var(--input-success-color);
-    }
-
-    .item-input::placeholder {
-      color: #000;
-      font-size: 1.6rem;
-    }
-
-    .char-count {
-      position: absolute;
-      right: 15px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 1.6rem;
-      color: var(--disabled-color);
-      pointer-events: none;
-    }
-
-    .price-box {
-      margin-top: 50px;
-      width: 220px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .price-text {
-      font-size: 1.6rem;
-      color: var(--button-darkcolor);
-      font-weight: 500;
-    }
-
-    .input-group {
-      display: flex;
-    }
-
-    .price-input {
-      flex: 1;
-      height: 54px;
-      width: 54px;
-      padding: 0 15px;
-      font-size: 1.6rem;
-      border: 1px solid #ddd;
-      border-right: none;
-      border-radius: 4px 0 0 4px;
-      outline: none;
-    }
-
-    .unit-button {
-      width: 54px;
-      height: 54px;
-      background-color: #ccc;
-      border: 1px solid #ddd;
-      border-radius: 0 4px 4px 0;
-      font-size: 1.4rem;
-      color: var(--background-color);
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-shrink: 0;
-    }
-    .check-box {
-      width: 100%;
-      max-width: 480px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-bottom: 30px;
-    }
-
-    .check-label {
-      font-size: 1.6rem;
-      color: var(--button-darkcolor);
-      font-weight: 500;
-    }
-
-    .check-input {
-      width: 100%;
-      height: 54px;
-      padding: 0 15px;
-      font-size: 1.6rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      outline: none;
-      transition: border-color 0.3s;
-    }
-
-    .check-input.error {
-      border: 1px solid var(--input-error-color);
-    }
-
-    .check-input.error:focus {
-      border: 2px solid var(--input-error-color);
-    }
-
-    .check-input.success {
-      border: 1px solid var(--input-success-color);
-    }
-
-    .check-input.success:focus {
-      border: 2px solid var(--input-success-color);
-    }
-
-    .message {
-      font-size: 1.6rem;
-      margin-top: 5px;
-      display: none;
-    }
-
-    .message.error {
-      color: var(--input-error-color);
-      display: block;
-    }
-
-    .message.success {
-      color: var(--input-success-color);
-      display: block;
-    }
-  </style>
   <body>
-    <div class="id-box">
-      <label for="id">아이디</label>
-      <input type="text" id="id" class="id-input" />
-    </div>
-
-    <div class="ps-box">
-      <label for="password" class="ps-text">비밀번호</label>
-      <input
-        type="password"
-        id="password"
-        class="ps-input"
-        placeholder="text"
-      />
-    </div>
-
-    <div class="item-box">
-      <label for="itemName" class="item-text">상품명</label>
-      <div class="input-wrapper">
-        <input
-          type="text"
-          id="itemName"
-          class="item-input"
-          placeholder="상품명을 입력해주세요."
-          maxlength="50"
-        />
-        <span class="char-count"> <span id="currentCount">0</span>/50 </span>
-      </div>
-    </div>
-    <div class="price-box">
-      <label for="price" class="price-text">판매가</label>
-      <div class="input-group">
-        <input type="text" id="price" class="price-input" value="0" />
-        <button class="unit-button" type="submit">원</button>
-      </div>
-    </div>
-    <div class="check-box">
-      <label for="id-check" class="check-label">아이디</label>
-      <input type="text" id="id-check" class="check-input" placeholder="text" />
-      <p class="message"></p>
-    </div>
+    <input-input></input-input>
     <script type="module" src="/src/main.js"></script>
-    <script>
-      const input = document.getElementById('itemName')
-      const countSpan = document.getElementById('currentCount')
-
-      input.addEventListener('input', function () {
-        countSpan.textContent = this.value.length
-      })
-
-      const priceInput = document.getElementById('price')
-      priceInput.addEventListener('input', function (e) {
-        let value = this.value.replace(/[^\d]/g, '')
-        if (value) {
-          value = Number(value).toLocaleString()
-        }
-        this.value = value
-      })
-    </script>
   </body>
 </html>
