fixed : vite-plugin 예전 코드 정리

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>hodu-market</title>
   </head>
   <body>
+    <bottom-footer></bottom-footer>
+    <button-large></button-large>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
