--- a/index.html
+++ b/index.html
@@ -7,7 +7,73 @@
     <link rel="stylesheet" href="./src/style.css" />
     <title>hodu-market</title>
   </head>
+  <style>
+    a {
+      display: block;
+    }
+    .logo {
+      width: 124px;
+      height: 38px;
+    }
+    .shop {
+      width: 32px;
+      height: 32px;
+      background: url(./src/assets/images/icon-shopping-cart.png) no-repeat
+        center top / 100%;
+    }
+    .shop-gr {
+      width: 32px;
+      height: 32px;
+      background: url(./src/assets/images/icon-shopping-cart-2.png) no-repeat
+        center top / 100%;
+    }
+    .user {
+      width: 32px;
+      height: 32px;
+      background: url(./src/assets/images/icon-user.png) no-repeat center top /
+        100%;
+    }
+    .user-gr {
+      width: 32px;
+      height: 32px;
+      background: url(./src/assets/images/icon-user-2.png) no-repeat center
+        top / 100%;
+    }
+    .bag {
+      width: 32px;
+      height: 32px;
+      background: url(./src/assets/images/icon-shopping-bag.png) no-repeat
+        center top / 100%;
+    }
+    .plus {
+      width: 32px;
+      height: 32px;
+      background: url(./src/assets/images/icon-plus.png) no-repeat center top /
+        100%;
+    }
+  </style>
   <body>
+    <a href="" class="logo">
+      <img src="./src/assets/images/Logo-hodu.png" alt="Hodu" />
+    </a>
+    <a href="" class="instar">
+      <img src="./src/assets/images/icon-insta.png" alt="instargram" />
+    </a>
+    <a href="" class="face">
+      <img src="./src/assets/images/icon-fb.png" alt="facebook" />
+    </a>
+    <a href="" class="youtube">
+      <img src="./src/assets/images/icon-yt.png" alt="Youtube" />
+    </a>
+    <a href="" class="shop"></a>
+    <a href="" class="shop-gr"></a>
+    <a href="" class="user"></a>
+    <a href="" class="user-gr"></a>
+    <a href="" class="bag"></a>
+    <a href="" class="plus"></a>
+    <a href="" class="plus"></a>
+    <a href="" class="plus"></a>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
