feat: 로고제작 중간저장

--- a/index.html
+++ b/index.html
@@ -51,6 +51,42 @@
       background: url(./src/assets/images/icon-plus.png) no-repeat center top /
         100%;
     }
+    .down-arrow {
+      width: 22px;
+      height: 22px;
+      background: url(./src/assets/images/icon-down-arrow.png) no-repeat center
+        top / 100%;
+    }
+    .right-arrow {
+      width: 22px;
+      height: 22px;
+      background: url(./src/assets/images/icon-rhigt-arrow.png) no-repeat center
+        top / 100%;
+    }
+    .up-arrow {
+      width: 22px;
+      height: 22px;
+      background: url(./src/assets/images/icon-up-arrow.png) no-repeat center
+        top / 100%;
+    }
+    .minus {
+      width: 20px;
+      height: 20px;
+      background: url(./src/assets/images/icon-minus-line.png) no-repeat center
+        top / 100%;
+    }
+    .plus-icon {
+      width: 20px;
+      height: 20px;
+      background: url(./src/assets/images/icon-plus-line.png) no-repeat center
+        top / 100%;
+    }
+    .delect {
+      width: 22px;
+      height: 22px;
+      background: url(./src/assets/images/icon-delete.png) no-repeat center
+        top / 100%;
+    }
   </style>
   <body>
     <a href="" class="logo">
@@ -71,8 +107,12 @@
     <a href="" class="user-gr"></a>
     <a href="" class="bag"></a>
     <a href="" class="plus"></a>
-    <a href="" class="plus"></a>
-    <a href="" class="plus"></a>
+    <a href="" class="down-arrow"></a>
+    <a href="" class="right-arrow"></a>
+    <a href="" class="up-arrow"></a>
+    <a href="" class="delect"></a>
+    <a href="" class="minus"></a>
+    <a href="" class="plus-icon"></a>
 
     <script type="module" src="/src/main.js"></script>
   </body>
