404 예시 페이지

--- a/src/pages/page404/index.html
+++ b/src/pages/page404/index.html
@@ -3,9 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <meta
+      name="description"
+      content="페이지를 찾을 수 없습니다. 페이지가 존재하지 않거나 사용할 수 없는 페이지입니다."
+    />
+    <meta property="og:title" content="404 - 페이지를 찾을 수 없습니다" />
+    <meta
+      property="og:description"
+      content="페이지가 존재하지 않거나 사용할 수 없는 페이지입니다."
+    />
+    <title>404 - 페이지를 찾을 수 없습니다 | HODU MARKET</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script src="./main.js"></script>
+    <main class="error-page">
+      <div class="error-icon">
+        <img src="../../assets/images/icon-404.png" alt="404 오류 아이콘" />
+      </div>
+
+      <div class="error-message">
+        <strong class="error-title">페이지를 찾을 수 없습니다.</strong>
+        <p class="error-description">
+          페이지가 존재하지 않거나 사용할 수 없는 페이지입니다.<br />
+          입력하신 주소가 정확한지 다시 한번 확인해 주세요.
+        </p>
+        <div class="error-actions">
+          <button-large
+            text="메인으로"
+            variant="dark"
+            type="button"
+            id="goHomeBtn"
+          ></button-large>
+          <button-large
+            text="이전 페이지"
+            variant="white"
+            type="button"
+            id="goBackBtn"
+          ></button-large>
+        </div>
+      </div>
+    </main>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
