style: M-button 최소 너비를 200px로 수정 및 404 페이지 버튼 컴포넌트 변경

--- a/src/pages/page404/index.html
+++ b/src/pages/page404/index.html
@@ -28,18 +28,18 @@
           입력하신 주소가 정확한지 다시 한번 확인해 주세요.
         </p>
         <div class="error-actions">
-          <button-large
+          <button-medium
             text="메인으로"
-            variant="dark"
+            variant="active"
             type="button"
             id="goHomeBtn"
-          ></button-large>
-          <button-large
+          ></button-medium>
+          <button-medium
             text="이전 페이지"
             variant="white"
             type="button"
             id="goBackBtn"
-          ></button-large>
+          ></button-medium>
         </div>
       </div>
     </main>
