feat:로고 컴포넌트화 & style: input 가변속성 스타일 변경

--- a/index.html
+++ b/index.html
@@ -6,114 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
     <title>hodu-market</title>
+    <style>
+      .box {
+        width: 150px;
+      }
+    </style>
   </head>
-  <style>
-    a {
-      display: block;
-    }
-    .logo {
-      width: 124px;
-      height: 38px;
-    }
-    .shop {
-      width: 32px;
-      height: 32px;
-      background: url(./src/assets/images/icon-shopping-cart.png) no-repeat
-        center top / 100%;
-    }
-    .shop-gr {
-      width: 32px;
-      height: 32px;
-      background: url(./src/assets/images/icon-shopping-cart-2.png) no-repeat
-        center top / 100%;
-    }
-    .user {
-      width: 32px;
-      height: 32px;
-      background: url(./src/assets/images/icon-user.png) no-repeat center top /
-        100%;
-    }
-    .user-gr {
-      width: 32px;
-      height: 32px;
-      background: url(./src/assets/images/icon-user-2.png) no-repeat center
-        top / 100%;
-    }
-    .bag {
-      width: 32px;
-      height: 32px;
-      background: url(./src/assets/images/icon-shopping-bag.png) no-repeat
-        center top / 100%;
-    }
-    .plus {
-      width: 32px;
-      height: 32px;
-      background: url(./src/assets/images/icon-plus.png) no-repeat center top /
-        100%;
-    }
-    .down-arrow {
-      width: 22px;
-      height: 22px;
-      background: url(./src/assets/images/icon-down-arrow.png) no-repeat center
-        top / 100%;
-    }
-    .right-arrow {
-      width: 22px;
-      height: 22px;
-      background: url(./src/assets/images/icon-rhigt-arrow.png) no-repeat center
-        top / 100%;
-    }
-    .up-arrow {
-      width: 22px;
-      height: 22px;
-      background: url(./src/assets/images/icon-up-arrow.png) no-repeat center
-        top / 100%;
-    }
-    .minus {
-      width: 20px;
-      height: 20px;
-      background: url(./src/assets/images/icon-minus-line.png) no-repeat center
-        top / 100%;
-    }
-    .plus-icon {
-      width: 20px;
-      height: 20px;
-      background: url(./src/assets/images/icon-plus-line.png) no-repeat center
-        top / 100%;
-    }
-    .delect {
-      width: 22px;
-      height: 22px;
-      background: url(./src/assets/images/icon-delete.png) no-repeat center
-        top / 100%;
-    }
-  </style>
   <body>
-    <a href="" class="logo">
-      <img src="./src/assets/images/Logo-hodu.png" alt="Hodu" />
-    </a>
-    <a href="" class="instar">
-      <img src="./src/assets/images/icon-insta.png" alt="instargram" />
-    </a>
-    <a href="" class="face">
-      <img src="./src/assets/images/icon-fb.png" alt="facebook" />
-    </a>
-    <a href="" class="youtube">
-      <img src="./src/assets/images/icon-yt.png" alt="Youtube" />
-    </a>
-    <a href="" class="shop"></a>
-    <a href="" class="shop-gr"></a>
-    <a href="" class="user"></a>
-    <a href="" class="user-gr"></a>
-    <a href="" class="bag"></a>
-    <a href="" class="plus"></a>
-    <a href="" class="down-arrow"></a>
-    <a href="" class="right-arrow"></a>
-    <a href="" class="up-arrow"></a>
-    <a href="" class="delect"></a>
-    <a href="" class="minus"></a>
-    <a href="" class="plus-icon"></a>
-
+    <logo-bag></logo-bag>
+    <logo-delete></logo-delete>
+    <div class="box">
+      <input-id></input-id>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
