--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     a {
       display: block;
     }
-    .logo {
-      width: 124px;
-      height: 38px;
+    .logo-box {
+      width: 300px;
     }
+    .logo img {
+      width: 100%;
+    }
+
     .shop {
       width: 32px;
       height: 32px;
@@ -89,9 +92,11 @@
     }
   </style>
   <body>
-    <a href="" class="logo">
-      <img src="./src/assets/images/Logo-hodu.png" alt="Hodu" />
-    </a>
+    <div class="logo-box">
+      <a href="" class="logo">
+        <img src="./src/assets/images/Logo-hodu.png" alt="Hodu" />
+      </a>
+    </div>
     <a href="" class="instar">
       <img src="./src/assets/images/icon-insta.png" alt="instargram" />
     </a>
@@ -101,6 +106,10 @@
     <a href="" class="youtube">
       <img src="./src/assets/images/icon-yt.png" alt="Youtube" />
     </a>
+    <a href="">
+      <img src="./src/assets/images/icon-img.png" alt="" />
+    </a>
+    <a href=""> </a>
     <a href="" class="shop"></a>
     <a href="" class="shop-gr"></a>
     <a href="" class="user"></a>
