fixed:logo- componet 가변속성가지도록 수정

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <a href="" class="delect"></a>
     <a href="" class="minus"></a>
     <a href="" class="plus-icon"></a>
-
+    <logo-checkbox></logo-checkbox>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
