fixed: logo-component 절대경로로 지정 및 css display:block; 추가

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <a href="" class="delect"></a>
     <a href="" class="minus"></a>
     <a href="" class="plus-icon"></a>
-
+    <a href="" class="hodu"
+      ><img src="./src/assets/images/Logo-hodu.png" alt=""
+    /></a>
+    <logo-component></logo-component>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
