--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./src/style.css" />
     <title>hodu-market</title>
   </head>
+  <style>
+    .radio-off {
+      display: block;
+      width: 28px;
+      height: 28px;
+      background: url(./src/assets/images/icon-check-off.png) no-repeat center
+        top / 100%;
+    }
+    .radio-on {
+      display: block;
+      width: 28px;
+      height: 28px;
+      background: url(./src/assets/images/icon-check-on.png) no-repeat center
+        top / 100%;
+    }
+  </style>
   <body>
     <div class="logo-box">
       <a href="" class="logo">
@@ -38,7 +54,9 @@
     <a href="" class="delect"></a>
     <a href="" class="minus"></a>
     <a href="" class="plus-icon"></a>
-
+    <a href=""><img src="./src/assets/images/Logo-hodu.png" alt="hodu" /></a>
+    <div class="radio-off"></div>
+    <div class="radio-on"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
