--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="./src/style.css" />
     <title>hodu-market</title>
   </head>
-  <body>
+  <style>
+   
+
+    
+  </style>
+</head>
+<body>
     <script type="module" src="/src/main.js"></script>
+    <sellercart-header></sellercart-header>
+    <sellercart-item></sellercart-item>
   </body>
 </html>
