--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
     <link rel="stylesheet" href="./src/style.css" />
     <title>hodu-market</title>
   </head>
-  <style>
-   
-
-    
-  </style>
 </head>
 <body>
+    <bottom-footer></bottom-footer>
     <script type="module" src="/src/main.js"></script>
-    <sellercart-header></sellercart-header>
-    <sellercart-item></sellercart-item>
   </body>
 </html>
