--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -1,12 +1,49 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hodu-market</title>
-  </head>
-  <body>
-    <script type="module" src="./main.js"></script>
-  </body>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HODU Login</title>
+  <link rel="stylesheet" href="/src/pages/login/style.css" />
+</head>
+<body>
+  <main class="page">
+    <!-- 로고 -->
+    <h1 class="brand"></h1>
+
+    <!-- 로그인 카드 -->
+    <section class="card" aria-label="로그인">
+      <div class="tabs" role="tablist" aria-label="회원 유형">
+        <button class="tab is-active" type="button" role="tab" aria-selected="true">
+          구매회원 로그인
+        </button>
+        <button class="tab" type="button" role="tab" aria-selected="false">
+          판매회원 로그인
+        </button>
+      </div>
+
+      <div class="panel" role="tabpanel">
+        <form class="form" action="#" method="post">
+          <div class="field">
+            <label class="field-label sr-only" for="id">아이디</label>
+            <input class="field-input" id="id" name="id" type="text" placeholder="아이디" />
+          </div>
+
+          <div class="field">
+            <label class="sr-only" for="pw">비밀번호</label>
+            <input class="field-input" id="pw" name="pw" type="password" placeholder="비밀번호" />
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <!-- 하단 링크 -->
+    <nav class="links" aria-label="계정 관련">
+      <a href="#">회원가입</a>
+      <span class="divider" aria-hidden="true">|</span>
+      <a href="#">비밀번호 찾기</a>
+    </nav>
+    <button-medium text="로그인" variant="default"></button-medium>
+  </main>
+</body>
 </html>
