fixed: 로그인창 화면 수정

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -8,42 +8,35 @@
 </head>
 <body>
   <main class="page">
-    <!-- 로고 -->
-    <h1 class="brand"></h1>
 
-    <!-- 로그인 카드 -->
+    <!-- 1) 로고 -->
+    <header class="logo-area">
+    </header>
+    
+    <!-- 2) 로그인 카드 -->
     <section class="card" aria-label="로그인">
-      <div class="tabs" role="tablist" aria-label="회원 유형">
-        <button class="tab is-active" type="button" role="tab" aria-selected="true">
-          구매회원 로그인
-        </button>
-        <button class="tab" type="button" role="tab" aria-selected="false">
-          판매회원 로그인
-        </button>
-      </div>
+      <h1 class="title">로그인</h1>
 
-      <div class="panel" role="tabpanel">
-        <form class="form" action="#" method="post">
-          <div class="field">
-            <label class="field-label sr-only" for="id">아이디</label>
-            <input class="field-input" id="id" name="id" type="text" placeholder="아이디" />
-          </div>
+      <!-- 입력 + 버튼을 한 묶음으로 -->
+      <div class="form-box">
+        <div class="inputs">
+          <input-idcheck></input-idcheck>
+          <input-password></input-password>
+        </div>
 
-          <div class="field">
-            <label class="sr-only" for="pw">비밀번호</label>
-            <input class="field-input" id="pw" name="pw" type="password" placeholder="비밀번호" />
-          </div>
-        </form>
+        <div class="submit-area">
+          <button-medium text="로그인"></button-medium>
+        </div>
       </div>
     </section>
 
-    <!-- 하단 링크 -->
-    <nav class="links" aria-label="계정 관련">
-      <a href="#">회원가입</a>
+    <!-- 3) 하단 링크 -->
+    <nav class="links" aria-label="계정 관련 링크">
+      <a class="link" href="#">회원가입</a>
       <span class="divider" aria-hidden="true">|</span>
-      <a href="#">비밀번호 찾기</a>
+      <a class="link" href="#">비밀번호 찾기</a>
     </nav>
-    <button-medium text="로그인" variant="default"></button-medium>
+
   </main>
 </body>
 </html>
