feat:메인페이지 헤더 푸터 적용

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
 </head>
 <body>
-
+<header-search></header-search>
+<product-list></product-list>
+<bottom-footer></bottom-footer>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
