경로 최적화

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -6,6 +6,8 @@
     <title></title>
   </head>
   <body>
-    <script src="./main.js"></script>
+    <header-search></header-search>
+    <bottom-footer></bottom-footer>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
