--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -21,9 +21,7 @@
           <!-- 좌측: 이미지 영역 -->
           <div class="product-images">
             <div class="main-image-wrapper">
-              <img 
-                id="mainImage"
-              />
+              <img id="mainImage" />
             </div>
           </div>
 
@@ -52,10 +50,10 @@
 
             <!-- 수량 선택 -->
             <div class="quantity-section">
-              <etc-amountcounter 
+              <etc-amountcounter
                 id="productQuantity"
-                min="1" 
-                max="370" 
+                min="1"
+                max="370"
                 value="1"
               ></etc-amountcounter>
             </div>
@@ -69,7 +67,9 @@
                 <span class="total-label">총 상품 금액</span>
               </div>
               <div class="total-price-wrapper">
-                <span class="total-quantity">총 수량 <strong id="totalQuantity">1</strong>개</span>
+                <span class="total-quantity"
+                  >총 수량 <strong id="totalQuantity">1</strong>개</span
+                >
                 <div class="total-price">
                   <span id="totalPrice" class="price-amount">17,500</span>
                   <span class="price-unit">원</span>
@@ -79,15 +79,15 @@
 
             <!-- 버튼 영역 -->
             <div class="action-buttons">
-              <button-medium 
+              <button-medium
                 id="buyNowBtn"
-                text="바로 구매" 
+                text="바로 구매"
                 width="416px"
               ></button-medium>
-              
-              <button-medium 
+
+              <button-medium
                 id="addToCartBtn"
-                text="장바구니" 
+                text="장바구니"
                 variant="dark"
                 width="200px"
               ></button-medium>
@@ -99,23 +99,10 @@
         <section class="product-tabs-section">
           <!-- 탭 버튼 -->
           <div class="tabs-header">
-            <button-tab 
-              class="tab-button" 
-              text="버튼" 
-              active
-            ></button-tab>
-            <button-tab 
-              class="tab-button" 
-              text="리뷰"
-            ></button-tab>
-            <button-tab 
-              class="tab-button" 
-              text="Q&A"
-            ></button-tab>
-            <button-tab 
-              class="tab-button" 
-              text="반품/교환정보"
-            ></button-tab>
+            <button-tab class="tab-button" text="버튼" active></button-tab>
+            <button-tab class="tab-button" text="리뷰"></button-tab>
+            <button-tab class="tab-button" text="Q&A"></button-tab>
+            <button-tab class="tab-button" text="반품/교환정보"></button-tab>
           </div>
 
           <!-- 탭 컨텐츠 -->
